feat: ファイルダウンロードを実装

--- a/.gitignore
+++ b/.gitignore
@@ -325,3 +325,7 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,linux,visualstudiocode,jetbrains+all,node
 
 .idea/*
+
+# data directory
+**/data/**
+!**/data/.gitkeep
