--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "jsdom": "^24.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
